match history modal added. more interactive. shifted match mode to the side on profile page match history. match history modal contains elo change, score, teams, and completion reason.